--- a/src/JobCard.css
+++ b/src/JobCard.css
@@ -1,6 +1,11 @@
 .JobCard {
-    border: 3px solid lavender;
+    /* border: 3px solid lavender; */
     color: violet;
+    max-width: 90%;
+    border-radius: 15px;
+    margin: 10px auto;
+    background: white;
+    padding: 10px;
 }
 
 .JobCard-title {
