housekeeping: removed bloat, updated doc strings

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url(../public/bg.png);
+  background: url(../public/bg-test.jpg);
   background-attachment: fixed;
   background-position: 50%;
   background-repeat: no-repeat;
