--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,24 +1,8 @@
 .NavBar {
     display: flex;
     justify-content: space-between;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
     padding: 10px;
-    text-decoration: none;
     margin-bottom: 10px;
-}
-
-.NavBar a {
-    text-decoration: none;
-}
-
-.NavBar-links a {
-    margin-left: 10px;
-}
-
-button {
-    border: none;
-    background-color: cornflowerblue;
-    padding: 7px;
-    border-radius: 5px;
-    margin-left: 10px;
 }
