--- a/src/CompanyCard.css
+++ b/src/CompanyCard.css
@@ -1,25 +1,9 @@
 .CompanyCard {
     position: relative;
-    /* border: 3px solid lavender; */
-    padding: 10px;
+    padding: 20px;
     max-width: 90%;
     border-radius: 15px;
     margin: 10px auto;
-    background-color: white;
-}
-.CompanyCard a {
-    text-decoration: none;
-    color: violet;
-}
-
-.CompanyCard-logo {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    max-width: 50px;
-    max-height: 50px;
-}
-
-.CompanyCard-name {
-    color: palevioletred;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(10px);
 }
