--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url(../public/bg-test.jpg);
+  background: url(../public/bg.jpg);
   background-attachment: fixed;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  text-align: center;
+}
+
+a {
+  text-decoration: none;
 }
 
 code {
