--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  /* margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -9,15 +9,10 @@ body {
   background-attachment: fixed;
   background-position: 50%;
   background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
+  background-size: cover; */
+  /* text-align: center; */
 }
 
 a {
-  text-decoration: none;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* text-decoration: none; */
 }
